2004-10-26  Mark D. Baushke  <mdb@cvshome.org>

	* commit.c (checkaddfile): Create a dead version for a new file
	added to a branch. Fixes FIXCVS for tagdate tests.
	* sanity.sh (tagdate): Update to expect correct results.
	(death2, branch-after-import, join, ignore-on-branch): Ditto.
	
2004-10-26 Derek Price <derek@ximbiot.com>

	* client.c (connect_to_gserver): Avoid truncating error messages from
	the GSSAPI server.
	(Report from Dan Peterson <dbpete@aol.com>.)

2004-10-26 Derek Price <derek@ximbiot.com>

	* sanity.sh (import-quirks): Test an even branch number.

2004-10-25 Derek Price <derek@ximbiot.com>

	* import.c (import): Repair regex for regressions introduced in last
	commit.
	* sanity.sh (import-quirks): Test a few branch numbers import shouldn't
	have a problem with.

2004-10-25 Derek Price <derek@ximbiot.com>

	* import.c (import): Anchor and simplify branch verification regex.
	* sanity.sh (import-quirks): Test another pattern that should fail.

2004-10-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (tagdate): Added some additional tests and FIXCVS
	comments for dealing properly with a 'cvs add' of a file to
	a branch that already exists on the mainline.
	(Problem reported by Renny Barrett <rbarrett@curamsoftware.com>.)

	* sanity.sh (getrlogdate): New shell function.
	(tagdate-{13,14,16}): Use it to avoid 'sleep 60' by using
	the exact 1.1.4.1 timestamp for tagdate-14 and tagdate-16.
	
2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (tagdate): Fix typo.

2004-10-19 Derek Price <derek@ximbiot.com>

	* add.c (add): Avoid attempting to resurrect a dead rev 1.1.
	* sanity.sh (resurrection): Add test for the above.
	(Report from Dan Peterson <dbpete@aol.com>.)

2004-10-14 Derek Price <derek@ximbiot.com>

	* import.c (import): Verify branch specifications more thoroughly.
	* sanity.sh (importb): Adapt to new error message.
	(import-quirks): New test.

2004-10-04 Derek Price <derek@ximbiot.com>
